--- a/app/src/main/res/layout/activity_splaish.xml
+++ b/app/src/main/res/layout/activity_splaish.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical"
     android:background="@color/splashBackgroundColor">
     <TextView
+        android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
@@ -17,6 +18,7 @@
 
     <Button
         android:id="@+id/button"
+        android:background="@color/splash_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/button_margin"
